Added linked in

--- a/resume.tex
+++ b/resume.tex
@@ -138,7 +138,7 @@
     $|$
     \faAt \hspace{.5pt} \href{srinjoy003@gmail.com}{srinjoy003@gmail.com}
     $|$
-    \faLinkedinSquare \hspace{.5pt} \href{https://www.linkedin.com/in/arasgungore}{LinkedIn}
+    \faLinkedinSquare \hspace{.5pt} \href{https://linkedin.com/in/srinjoy-sengupta-b28565302}{LinkedIn}
     $|$
     \faGithub \hspace{.5pt} \href{https://github.com/Srinjoy003}{GitHub}
     $|$
