--- a/resume.tex
+++ b/resume.tex
@@ -142,7 +142,7 @@
     $|$
     \faGithub \hspace{.5pt} \href{https://github.com/Srinjoy003}{GitHub}
     $|$
-    \faGlobe \hspace{.5pt} \href{https://arasgungore.github.io}{Portfolio}
+    \faGlobe \hspace{.5pt} \href{https://srinjoysengupta.vercel.app/}{Portfolio}
 \end{center}
 
 
