Added Work Experience

--- a/resume.tex
+++ b/resume.tex
@@ -136,7 +136,7 @@
     \small
     \faMobile \hspace{.5pt} \href{tel:918240330971}{+91 824 033 0971}
     $|$
-    \faAt \hspace{.5pt} \href{srinjoy003@gmail.com}{srinjoy003@gmail.com}
+    \faAt \hspace{.5pt} \href{srinjoy003@gmail.com}{srinjoy0003@gmail.com}
     $|$
     \faLinkedinSquare \hspace{.5pt} \href{https://linkedin.com/in/srinjoy-sengupta-b28565302}{LinkedIn}
     $|$
@@ -146,39 +146,6 @@
 \end{center}
 
 
-
-%----------- EDUCATION -----------
-
-\section{Education}
-  \vspace{3pt}
-  \resumeSubHeadingListStart
-    
-    \resumeEducationHeading
-      {Heritage Institute of Technology}{Kolkata, India}
-      {B.Tech. in Computer Science and Engineering}{Sep 2018 \textbf{--} Jun 2023}
-      {}{}
-      \textbf{Relevant Courses}
-      \vspace{-5pt}
-      \begin{itemize}[leftmargin=0.15in, label={}]
-        \item  \vspace{-1pt}  \textbf{CSEN 2201} \textit{Design and Analysis of Algorithms}  \textbf{(9/10)}
-        \item  \vspace{-1pt}  \textbf{CSEN 2251} \textit{Design and Analysis of Algorithms Lab}  \textbf{(10/10)}
-        \item  \vspace{-1pt}  \textbf{CSEN 2253} \textit{Operating Systems Lab}  \textbf{(9/10)}
-        \item  \vspace{-1pt}  \textbf{CSEN 2151} \textit{Data Structure and Algorithms Lab}  \textbf{(10/10)}
-        \item  \vspace{-1pt}  \textbf{CSEN 3003} \textit{Object Oriented Programming}  \textbf{(10/10)}
-        \item  \vspace{-1pt}  \textbf{CSEN 3053} \textit{Object Oriented Programming Lab}  \textbf{(10/10)}
-        \item  \vspace{-1pt}  \textbf{CSEN 3151} \textit{Database Management Systems Lab}  \textbf{(9/10)}
-        
-        
-        
-        
-
-      \end{itemize}
-
-      
-      
-      % \textbf{GPA: 3.58/4.00}
-       
-  \resumeSubHeadingListEnd
 
 
 
@@ -193,7 +160,7 @@
         
         \textbf{Technologies:}{ Node, React, Next JS, Express JS, Redux, TailwindCSS, WebSockets } \\ \vspace{3pt}
         
-        \textbf{Tools:}{ Linux, Git, GitHub} \\ \vspace{3pt}
+        \textbf{Tools:}{ Linux, Git, GitHub, Firebase} \\ \vspace{3pt}
         
     }}
   \resumeSubHeadingListEnd
@@ -202,24 +169,49 @@
 
 %----------- EXPERIENCE -----------
 
+\section{Work Experience}
+  \vspace{3pt}
+  \resumeSubHeadingListStart
+    
+    \resumeEducationHeading
+      {Web Developer}{Kolkata, India}
+      {SStruence Innovations Private Limited}{Apr 2024 \textbf{--} Jun 2024}
+      {}{}
+      \vspace{-15pt}
+      \resumeItemListStart
+          \resumeItem{Developed multiple pages for an eCommerce website, including the home page, brands page, and customer service page, using \textbf{NextJS} and \textbf{TailwindCSS}.}
+          \resumeItem{Integrated front-end components with backend services to ensure seamless data flow and functionality.}
+          \resumeItem{Collaborated with the design team to implement responsive and user-friendly UI/UX.}
+          \resumeItem{Troubleshot and resolved issues related to front-end and back-end integration, enhancing overall system reliability.}
+      \resumeItemListEnd
+      \vspace{10pt}
+
+  \resumeSubHeadingListEnd
+
+
+%----------- Projects -----------
+
+
 \section{Projects}
   \vspace{3pt}
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Key Ninja}{}
+    {Key Ninja (\textit{\href{https://key-ninja.vercel.app/}{\textbf{\underline{App}}} $|$ \href{https://github.com/Srinjoy003/touch-typing}{\textbf{\underline{Code}}}})}{}{}{}
       {}{}
       \vspace{-15pt}
         \resumeItemListStart
-            \resumeItem{Developed a full stack web application that enables users to practise, track and improve their typing speed.}
-            \resumeItem{Implemented features include the ability to practise or test typing which will be tracked and also allows customization ogf the text.}
-            \resumeItem{Built a statistics feature that gives a detailed analysis of the performance.}
-            \resumeItem{Utilized technologies such as \textbf{NextJS}, \textbf{TailwindCSS} and \textbf{MonngoDB} to deliver an amazing user experience.}
+            \resumeItem{Developed a full-stack web application enabling users to practice, track, and improve their typing speed.}
+            \resumeItem{Implemented features for practice and testing of typing skills, including performance tracking and text customization options.}
+            \resumeItem{Designed and built a detailed statistics feature to provide comprehensive performance analysis and insights.}
+            \resumeItem{Utilized \textbf{NextJS} for server-side rendering, \textbf{TailwindCSS} for responsive design, and \textbf{MonngoDB} for efficient data storage and retrieval.}
+
         \resumeItemListEnd
         \vspace{10pt}
       
     \resumeSubheading
-      {Chess Eclipse}{}
+      {Chess Eclipse (\textit{\href{https://chess-liard-nine.vercel.app/}{\textbf{\underline{App}}} $|$ \href{https://github.com/Srinjoy003/chess}{\textbf{\underline{Code}}}})}{}{}{}
+
       {}{}
       \vspace{-15pt}
         \resumeItemListStart
@@ -242,6 +234,41 @@
         \resumeItemListEnd
 
   \resumeSubHeadingListEnd
+
+  %----------- EDUCATION -----------
+
+\section{Education}
+\vspace{3pt}
+\resumeSubHeadingListStart
+  
+  \resumeEducationHeading
+    {Heritage Institute of Technology}{Kolkata, India}
+    {B.Tech. in Computer Science and Engineering}{Aug 2021 \textbf{--} Present}
+    {}{}
+    \textbf{Relevant Courses}
+    \vspace{-5pt}
+    \begin{itemize}[leftmargin=0.15in, label={}]
+      \item  \vspace{-1pt}  \textbf{CSEN 2201} \textit{Design and Analysis of Algorithms}  \textbf{(9/10)}
+      \item  \vspace{-1pt}  \textbf{CSEN 3003} \textit{Object Oriented Programming}  \textbf{(10/10)}
+      \item  \vspace{-1pt}  \textbf{CSEN 2253} \textit{Operating Systems Lab}  \textbf{(9/10)}
+
+      % \item  \vspace{-1pt}  \textbf{CSEN 2253} \textit{Operating Systems Lab}  \textbf{(9/10)}
+      % \item  \vspace{-1pt}  \textbf{CSEN 2151} \textit{Data Structure and Algorithms Lab}  \textbf{(10/10)}
+      % \item  \vspace{-1pt}  \textbf{CSEN 3003} \textit{Object Oriented Programming}  \textbf{(10/10)}
+      % \item  \vspace{-1pt}  \textbf{CSEN 3053} \textit{Object Oriented Programming Lab}  \textbf{(10/10)}
+      % \item  \vspace{-1pt}  \textbf{CSEN 3151} \textit{Database Management Systems Lab}  \textbf{(9/10)}
+      
+      
+      
+      
+
+    \end{itemize}
+
+    
+    
+ 
+     
+\resumeSubHeadingListEnd
 
 
 %-------------------------------------------
