--- a/resume.tex
+++ b/resume.tex
@@ -164,9 +164,9 @@
   \resumeSubHeadingListStart
     \small{\item{
         
-        \textbf{Languages:}{ C/C++, Java, Python, JavaScript, TypeScript, HTML, CSS, SQL, MongoDB} \\ \vspace{3pt}
+        \textbf{Languages:}{ C, C++, Java, Python, JavaScript, TypeScript} \\ \vspace{3pt}
         
-        \textbf{Technologies:}{ Node, React, Next JS, Express JS, Redux, TailwindCSS, WebSockets } \\ \vspace{3pt}
+        \textbf{Technologies:}{ Node, React, Next.js, Express.js, Redux, TailwindCSS, WebSockets, SQL, MongoDB } \\ \vspace{3pt}
         
         \textbf{Tools:}{ Linux, Git, GitHub, Firebase} \\ \vspace{3pt}
         
@@ -214,7 +214,7 @@
             \resumeItem{Developed a full-stack web application enabling users to practice, track, and improve their typing speed.}
             \resumeItem{Implemented features for practice and testing of typing skills, including performance tracking and text customization options.}
             \resumeItem{Designed and built a detailed statistics feature to provide comprehensive performance analysis and insights.}
-            \resumeItem{Utilized \textbf{NextJS} for server-side rendering, \textbf{TailwindCSS} for responsive design, and \textbf{MonngoDB} for efficient data storage and retrieval.}
+            \resumeItem{Utilized \textbf{Next.js} for server-side rendering, \textbf{TailwindCSS} for responsive design, and \textbf{MongoDB} for efficient data storage and retrieval.}
 
         \resumeItemListEnd
         \vspace{10pt}
@@ -224,10 +224,10 @@
       {}{}
       \vspace{-10pt}
         \resumeItemListStart
-            \resumeItem{Engineered an engaging online multiplayer Chess game, allowing users to compete with friends and others in
+            \resumeItem{Engineered an engaging online multiplayer chess game, allowing users to compete with friends and others in
             real-time }
-            \resumeItem{Integrated a chess engine capable of analyzing positions, generating moves, and simulating games. Built using advanced algorithms such as minimax, iterative deepening, quiescence search and principal variation search to optimize performance and decision-making.}
-            \resumeItem{Implemented the project using \textbf{NextJS}, \textbf{ExpressJS}, \textbf{Socket.IO}, \textbf{TailwindCSS} and \textbf{Typescript} }
+            \resumeItem{Integrated a chess engine capable of analyzing positions, generating moves, and simulating games. Built using Data Structures and algorithms such as minimax, iterative deepening, quiescence search, principal variation search and other graph traversal algorithms to optimize performance and decision-making.}
+            \resumeItem{Implemented the project using \textbf{Next.js}, \textbf{Express.js}, \textbf{Socket.IO}, \textbf{TailwindCSS} and \textbf{Typescript} }
         \resumeItemListEnd
         \vspace{10pt}
 
